@startuml Builder Pattern

title 建造者模式 - 汽车生产

class Car {
    - wheel: String
    - oilBox: String
    - body: String
    + setWheel(wheel: String): void
    + setOilBox(oilBox: String): void
    + setBody(body: String): void
    + show(): void
}

abstract class CarBuilder {
    # car: Car
    + CarBuilder()
    + {abstract} buildWheel(): void
    + {abstract} buildOilBox(): void
    + {abstract} buildBody(): void
    + getCar(): Car
}

class BMWCarBuilder {
    + buildWheel(): void
    + buildOilBox(): void
    + buildBody(): void
}

class BenzCarBuilder {
    + buildWheel(): void
    + buildOilBox(): void
    + buildBody(): void
}

class Director {
    - builder: CarBuilder
    + Director(builder: CarBuilder)
    + construct(): Car
}

CarBuilder <|-- BMWCarBuilder
CarBuilder <|-- BenzCarBuilder
CarBuilder o-- Car
Director o-- CarBuilder

note right of Director::construct
  指导构建过程：
  1. buildWheel()
  2. buildOilBox()
  3. buildBody()
end note

@enduml
